[package]
name = "exam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
egui_extras = {version = "*", features = ["image"]}
tracing-subscriber = "0.3"
eframe = "*"
rand = "*"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "*"
image = "*"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3